--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/[...path].js": {
-      "runtime": "nodejs18.x"
+     "api/**/*.js": {
+      "runtime": "nodejs20.x"
     }
   },
   "rewrites": [
