Add Vercel rewrites for API proxy and clean up axios interceptor

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "version": 2
+  "version": 2,
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://relsofttims-001-site1.gtempurl.com/api/:path*"
+    }
+  ]
 }
